[gd_scene load_steps=15 format=3 uid="uid://cvygwe34sxnb5"]

[ext_resource type="PackedScene" uid="uid://cd3vabikmslif" path="res://scenes/test_env_1.tscn" id="1_xspcp"]
[ext_resource type="PackedScene" uid="uid://deyfwmwydyk50" path="res://scenes/grid_map.tscn" id="2_5ramx"]
[ext_resource type="Script" path="res://scripts/take_snapshot_button.gd" id="2_vdpue"]
[ext_resource type="PackedScene" uid="uid://b1swp0d4dhma6" path="res://scenes/lidar_preview.tscn" id="3_0fp2x"]
[ext_resource type="Script" path="res://scripts/controller.gd" id="3_vleog"]
[ext_resource type="Script" path="res://scripts/compute_transform_button.gd" id="6_vs4tu"]
[ext_resource type="Script" path="res://scripts/icp.gd" id="7_u4dqj"]
[ext_resource type="Script" path="res://scripts/compare_button.gd" id="8_2j0dc"]
[ext_resource type="Script" path="res://scripts/normals_button.gd" id="8_rocb8"]
[ext_resource type="Script" path="res://scenes/clear_map_button.gd" id="9_qtdgu"]
[ext_resource type="Script" path="res://scenes/slam_gd.gd" id="11_5kuo6"]

[sub_resource type="ViewportTexture" id="ViewportTexture_p77bn"]
viewport_path = NodePath("simulation")

[sub_resource type="ViewportTexture" id="ViewportTexture_2126a"]
viewport_path = NodePath("map")

[sub_resource type="ViewportTexture" id="ViewportTexture_kkkfn"]
viewport_path = NodePath("lidar_preview")

[node name="Node2D" type="Node2D"]

[node name="simulation" type="SubViewport" parent="."]
own_world_3d = true
handle_input_locally = false
size = Vector2i(800, 512)
render_target_update_mode = 4

[node name="test_env_1" parent="simulation" instance=ExtResource("1_xspcp")]

[node name="lidar" parent="simulation/test_env_1/TurtleBot/lidar_mesh" index="0"]
raycast_count = 100

[node name="@RayCast3D@24889" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="0"]
target_position = Vector3(10, 0, 0)

[node name="@RayCast3D@24890" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="1"]
target_position = Vector3(9.98027, 0, 0.627905)

[node name="@RayCast3D@24891" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="2"]
target_position = Vector3(9.92115, 0, 1.25333)

[node name="@RayCast3D@24892" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="3"]
target_position = Vector3(9.82287, 0, 1.87381)

[node name="@RayCast3D@24893" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="4"]
target_position = Vector3(9.68583, 0, 2.4869)

[node name="@RayCast3D@24894" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="5"]
target_position = Vector3(9.51056, 0, 3.09017)

[node name="@RayCast3D@24895" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="6"]
target_position = Vector3(9.29776, 0, 3.68125)

[node name="@RayCast3D@24896" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="7"]
target_position = Vector3(9.04827, 0, 4.25779)

[node name="@RayCast3D@24897" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="8"]
target_position = Vector3(8.76307, 0, 4.81754)

[node name="@RayCast3D@24898" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="9"]
target_position = Vector3(8.44328, 0, 5.35827)

[node name="@RayCast3D@24899" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="10"]
target_position = Vector3(8.09017, 0, 5.87785)

[node name="@RayCast3D@24900" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="11"]
target_position = Vector3(7.70513, 0, 6.37424)

[node name="@RayCast3D@24901" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="12"]
target_position = Vector3(7.28969, 0, 6.84547)

[node name="@RayCast3D@24902" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="13"]
target_position = Vector3(6.84547, 0, 7.28969)

[node name="@RayCast3D@24903" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="14"]
target_position = Vector3(6.37424, 0, 7.70513)

[node name="@RayCast3D@24904" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="15"]
target_position = Vector3(5.87785, 0, 8.09017)

[node name="@RayCast3D@24905" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="16"]
target_position = Vector3(5.35827, 0, 8.44328)

[node name="@RayCast3D@24906" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="17"]
target_position = Vector3(4.81754, 0, 8.76307)

[node name="@RayCast3D@24907" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="18"]
target_position = Vector3(4.25779, 0, 9.04827)

[node name="@RayCast3D@24908" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="19"]
target_position = Vector3(3.68125, 0, 9.29776)

[node name="@RayCast3D@24909" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="20"]
target_position = Vector3(3.09017, 0, 9.51056)

[node name="@RayCast3D@24910" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="21"]
target_position = Vector3(2.4869, 0, 9.68583)

[node name="@RayCast3D@24911" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="22"]
target_position = Vector3(1.87381, 0, 9.82287)

[node name="@RayCast3D@24912" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="23"]
target_position = Vector3(1.25333, 0, 9.92115)

[node name="@RayCast3D@24913" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="24"]
target_position = Vector3(0.627905, 0, 9.98027)

[node name="@RayCast3D@24914" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="25"]
target_position = Vector3(-1.60814e-15, 0, 10)

[node name="@RayCast3D@24915" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="26"]
target_position = Vector3(-0.627905, 0, 9.98027)

[node name="@RayCast3D@24916" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="27"]
target_position = Vector3(-1.25333, 0, 9.92115)

[node name="@RayCast3D@24917" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="28"]
target_position = Vector3(-1.87381, 0, 9.82287)

[node name="@RayCast3D@24918" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="29"]
target_position = Vector3(-2.4869, 0, 9.68583)

[node name="@RayCast3D@24919" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="30"]
target_position = Vector3(-3.09017, 0, 9.51056)

[node name="@RayCast3D@24920" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="31"]
target_position = Vector3(-3.68125, 0, 9.29776)

[node name="@RayCast3D@24921" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="32"]
target_position = Vector3(-4.25779, 0, 9.04827)

[node name="@RayCast3D@24922" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="33"]
target_position = Vector3(-4.81754, 0, 8.76307)

[node name="@RayCast3D@24923" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="34"]
target_position = Vector3(-5.35827, 0, 8.44328)

[node name="@RayCast3D@24924" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="35"]
target_position = Vector3(-5.87785, 0, 8.09017)

[node name="@RayCast3D@24925" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="36"]
target_position = Vector3(-6.37424, 0, 7.70513)

[node name="@RayCast3D@24926" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="37"]
target_position = Vector3(-6.84547, 0, 7.28969)

[node name="@RayCast3D@24927" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="38"]
target_position = Vector3(-7.28969, 0, 6.84547)

[node name="@RayCast3D@24928" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="39"]
target_position = Vector3(-7.70513, 0, 6.37424)

[node name="@RayCast3D@24929" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="40"]
target_position = Vector3(-8.09017, 0, 5.87785)

[node name="@RayCast3D@24930" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="41"]
target_position = Vector3(-8.44328, 0, 5.35827)

[node name="@RayCast3D@24931" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="42"]
target_position = Vector3(-8.76307, 0, 4.81754)

[node name="@RayCast3D@24932" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="43"]
target_position = Vector3(-9.04827, 0, 4.25779)

[node name="@RayCast3D@24933" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="44"]
target_position = Vector3(-9.29776, 0, 3.68125)

[node name="@RayCast3D@24934" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="45"]
target_position = Vector3(-9.51056, 0, 3.09017)

[node name="@RayCast3D@24935" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="46"]
target_position = Vector3(-9.68583, 0, 2.4869)

[node name="@RayCast3D@24936" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="47"]
target_position = Vector3(-9.82287, 0, 1.87381)

[node name="@RayCast3D@24937" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="48"]
target_position = Vector3(-9.92115, 0, 1.25333)

[node name="@RayCast3D@24938" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="49"]
target_position = Vector3(-9.98027, 0, 0.627905)

[node name="@RayCast3D@24939" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="50"]
target_position = Vector3(-10, 0, -3.21629e-15)

[node name="@RayCast3D@24940" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="51"]
target_position = Vector3(-9.98027, 0, -0.627905)

[node name="@RayCast3D@24941" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="52"]
target_position = Vector3(-9.92115, 0, -1.25333)

[node name="@RayCast3D@24942" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="53"]
target_position = Vector3(-9.82287, 0, -1.87381)

[node name="@RayCast3D@24943" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="54"]
target_position = Vector3(-9.68583, 0, -2.4869)

[node name="@RayCast3D@24944" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="55"]
target_position = Vector3(-9.51056, 0, -3.09017)

[node name="@RayCast3D@24945" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="56"]
target_position = Vector3(-9.29776, 0, -3.68125)

[node name="@RayCast3D@24946" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="57"]
target_position = Vector3(-9.04827, 0, -4.25779)

[node name="@RayCast3D@24947" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="58"]
target_position = Vector3(-8.76307, 0, -4.81754)

[node name="@RayCast3D@24948" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="59"]
target_position = Vector3(-8.44328, 0, -5.35827)

[node name="@RayCast3D@24949" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="60"]
target_position = Vector3(-8.09017, 0, -5.87785)

[node name="@RayCast3D@24950" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="61"]
target_position = Vector3(-7.70513, 0, -6.37424)

[node name="@RayCast3D@24951" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="62"]
target_position = Vector3(-7.28969, 0, -6.84547)

[node name="@RayCast3D@24952" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="63"]
target_position = Vector3(-6.84547, 0, -7.28969)

[node name="@RayCast3D@24953" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="64"]
target_position = Vector3(-6.37424, 0, -7.70513)

[node name="@RayCast3D@24954" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="65"]
target_position = Vector3(-5.87785, 0, -8.09017)

[node name="@RayCast3D@24955" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="66"]
target_position = Vector3(-5.35827, 0, -8.44328)

[node name="@RayCast3D@24956" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="67"]
target_position = Vector3(-4.81754, 0, -8.76307)

[node name="@RayCast3D@24957" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="68"]
target_position = Vector3(-4.25779, 0, -9.04827)

[node name="@RayCast3D@24958" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="69"]
target_position = Vector3(-3.68125, 0, -9.29776)

[node name="@RayCast3D@24959" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="70"]
target_position = Vector3(-3.09017, 0, -9.51056)

[node name="@RayCast3D@24960" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="71"]
target_position = Vector3(-2.4869, 0, -9.68583)

[node name="@RayCast3D@24961" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="72"]
target_position = Vector3(-1.87381, 0, -9.82287)

[node name="@RayCast3D@24962" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="73"]
target_position = Vector3(-1.25333, 0, -9.92115)

[node name="@RayCast3D@24963" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="74"]
target_position = Vector3(-0.627905, 0, -9.98027)

[node name="@RayCast3D@24964" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="75"]
target_position = Vector3(-1.83691e-15, 0, -10)

[node name="@RayCast3D@24965" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="76"]
target_position = Vector3(0.627905, 0, -9.98027)

[node name="@RayCast3D@24966" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="77"]
target_position = Vector3(1.25333, 0, -9.92115)

[node name="@RayCast3D@24967" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="78"]
target_position = Vector3(1.87381, 0, -9.82287)

[node name="@RayCast3D@24968" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="79"]
target_position = Vector3(2.4869, 0, -9.68583)

[node name="@RayCast3D@24969" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="80"]
target_position = Vector3(3.09017, 0, -9.51056)

[node name="@RayCast3D@24970" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="81"]
target_position = Vector3(3.68125, 0, -9.29776)

[node name="@RayCast3D@24971" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="82"]
target_position = Vector3(4.25779, 0, -9.04827)

[node name="@RayCast3D@24972" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="83"]
target_position = Vector3(4.81754, 0, -8.76307)

[node name="@RayCast3D@24973" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="84"]
target_position = Vector3(5.35827, 0, -8.44328)

[node name="@RayCast3D@24974" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="85"]
target_position = Vector3(5.87785, 0, -8.09017)

[node name="@RayCast3D@24975" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="86"]
target_position = Vector3(6.37424, 0, -7.70513)

[node name="@RayCast3D@24976" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="87"]
target_position = Vector3(6.84547, 0, -7.28969)

[node name="@RayCast3D@24977" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="88"]
target_position = Vector3(7.28969, 0, -6.84547)

[node name="@RayCast3D@24978" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="89"]
target_position = Vector3(7.70513, 0, -6.37424)

[node name="@RayCast3D@24979" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="90"]
target_position = Vector3(8.09017, 0, -5.87785)

[node name="@RayCast3D@24980" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="91"]
target_position = Vector3(8.44328, 0, -5.35827)

[node name="@RayCast3D@24981" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="92"]
target_position = Vector3(8.76307, 0, -4.81754)

[node name="@RayCast3D@24982" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="93"]
target_position = Vector3(9.04827, 0, -4.25779)

[node name="@RayCast3D@24983" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="94"]
target_position = Vector3(9.29776, 0, -3.68125)

[node name="@RayCast3D@24984" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="95"]
target_position = Vector3(9.51056, 0, -3.09017)

[node name="@RayCast3D@24985" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="96"]
target_position = Vector3(9.68583, 0, -2.4869)

[node name="@RayCast3D@24986" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="97"]
target_position = Vector3(9.82287, 0, -1.87381)

[node name="@RayCast3D@24987" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="98"]
target_position = Vector3(9.92115, 0, -1.25333)

[node name="@RayCast3D@24988" type="RayCast3D" parent="simulation/test_env_1/TurtleBot/lidar_mesh/lidar" index="99"]
target_position = Vector3(9.98027, 0, -0.627905)

[node name="simulation_sprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(265, 170)
scale = Vector2(0.65, 0.65)
texture = SubResource("ViewportTexture_p77bn")
metadata/_edit_lock_ = true

[node name="map" type="SubViewport" parent="."]
size = Vector2i(800, 512)

[node name="grid_map" parent="map" instance=ExtResource("2_5ramx")]

[node name="grid_map_sprite" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(795, 170)
scale = Vector2(0.65, 0.65)
texture = SubResource("ViewportTexture_2126a")

[node name="lidar_preview" type="SubViewport" parent="."]
size = Vector2i(320, 290)

[node name="lidar_preview" parent="lidar_preview" instance=ExtResource("3_0fp2x")]

[node name="lidar_preview_sprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(164, 492)
texture = SubResource("ViewportTexture_kkkfn")

[node name="background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.890196, 0.890196, 0.890196, 1)

[node name="controller" type="Node" parent="."]
script = ExtResource("3_vleog")

[node name="snapshot_button" type="Button" parent="controller"]
offset_left = 332.0
offset_top = 348.0
offset_right = 450.0
offset_bottom = 379.0
text = "take snapshot"
script = ExtResource("2_vdpue")

[node name="compare_button" type="Button" parent="controller"]
offset_left = 454.0
offset_top = 348.0
offset_right = 710.0
offset_bottom = 379.0
text = "compare consecutive snapshots"
script = ExtResource("8_2j0dc")

[node name="icp_button" type="Button" parent="controller"]
offset_left = 715.0
offset_top = 348.0
offset_right = 825.0
offset_bottom = 379.0
text = "iterate icp
"
script = ExtResource("6_vs4tu")

[node name="normals_button" type="Button" parent="controller"]
offset_left = 829.0
offset_top = 348.0
offset_right = 946.0
offset_bottom = 379.0
text = "show normals"
script = ExtResource("8_rocb8")

[node name="clear_map_button" type="Button" parent="controller"]
offset_left = 956.0
offset_top = 347.0
offset_right = 1041.0
offset_bottom = 378.0
text = "clear map
"
script = ExtResource("9_qtdgu")

[node name="TextEdit" type="TextEdit" parent="controller"]
offset_left = 331.0
offset_top = 385.0
offset_right = 1101.0
offset_bottom = 634.0
placeholder_text = "Log"
editable = false

[node name="stepped_scans" type="CheckButton" parent="controller"]
offset_left = 926.0
offset_top = 391.0
offset_right = 1096.0
offset_bottom = 422.0
text = "stepped scans"
alignment = 2
text_overrun_behavior = 1

[node name="icp_gds" type="Node" parent="controller"]
script = ExtResource("7_u4dqj")

[node name="step_scan" type="Button" parent="controller"]
offset_left = 1055.0
offset_top = 346.0
offset_right = 1136.0
offset_bottom = 377.0
text = "step scan"

[node name="Icp" type="Icp" parent="."]

[node name="OccupancyMapVisualizer" type="OccupancyMapVisualizer" parent="."]
dim_x = 100
dim_y = 100
position = Vector2(566, 11)

[node name="SLAM_GD" type="Node" parent="."]
script = ExtResource("11_5kuo6")

[connection signal="toggled" from="controller/stepped_scans" to="SLAM_GD" method="_on_stepped_scans_toggled"]
[connection signal="pressed" from="controller/step_scan" to="SLAM_GD" method="_on_step_scan_pressed"]
[connection signal="console_log" from="SLAM_GD" to="controller" method="_on_slam_gd_console_log"]

[editable path="simulation/test_env_1"]
[editable path="simulation/test_env_1/TurtleBot"]
